refactor(examples): use String.isBlank() instead of trim().isEmpty() [EX-T4-2]
🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>