@@ -98,6 +98,6 @@ public final class Erc20TransferLogExample {
   }
 
   private static boolean isBlank(final String value) {
-    return value == null || value.trim().isEmpty();
+    return value == null || value.isBlank();
   }
 }
